<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Purple"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/clock0"
        android:layout_width="780dp"
        android:layout_height="520dp"
        android:layout_marginBottom="406dp"
        android:src="@drawable/clock0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_time"
        android:layout_width="388dp"
        android:layout_height="50dp"
        android:text="@string/_00_10"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:lineSpacingExtra="-7sp"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="196dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="412dp"
        app:layout_constraintStart_toStartOf="@id/clock0"
        app:layout_constraintEnd_toEndOf="@id/clock0"
        app:layout_constraintBottom_toBottomOf="@id/clock0"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/clock1"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="290dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clock1_text"
        android:layout_width="49dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="63dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/london"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>


    <ImageView
        android:id="@+id/clock2"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="290dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clock1" />

    <TextView
        android:id="@+id/clock2_text"
        android:layout_width="60dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/moscow"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>

    <ImageView
        android:id="@+id/clock3"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="290dp"
        android:layout_marginEnd="28dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clock2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/clock3_text"
        android:layout_width="45dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="301dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/parish"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>

    <ImageView
        android:id="@+id/clock4"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="147dp"
        android:layout_marginTop="37dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock1_text"/>

    <TextView
        android:id="@+id/clock4_text"
        android:layout_width="45dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="63dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/czech"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>

    <ImageView
        android:id="@+id/clock5"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="147dp"
        android:layout_marginTop="37dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clock1"
        app:layout_constraintTop_toBottomOf="@id/clock2_text"/>

    <TextView
        android:id="@+id/clock5_text"
        android:layout_width="56dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/istanbul"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>

    <ImageView
        android:id="@+id/clock6"
        android:layout_width="119dp"
        android:layout_height="118dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="147dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="37dp"
        android:background="@color/Purple"
        android:backgroundTint="@color/Purple"
        android:src="@drawable/clock_choice6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/clock5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock3_text"/>

    <TextView
        android:id="@+id/clock6_text"
        android:layout_width="52dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/clock6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="301dp"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/yerevan"
        android:textColor="@color/white"
        android:lineSpacingExtra="-3sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/break_but_start"
        android:layout_width="388dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/gradient"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
