<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Purple"
    tools:context=".FiveActivity">

    <ImageView
        android:id="@+id/clock0"
        android:layout_width="780dp"
        android:layout_height="520dp"
        android:layout_marginBottom="406dp"
        android:src="@drawable/clock0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="388dp"
        android:layout_height="170dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="170dp"
        android:gravity="center"
        android:lineSpacingExtra="-13sp"
        android:text="@string/your_total_score_is"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="400dp"
        android:layout_height="71dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        android:lineSpacingExtra="-13sp"
        android:text="@string/congratulations"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/final_score"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:background="@drawable/gradient"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/break_but_refresh"
        android:layout_width="388dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/gradient"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>